scoring functioning, add some css

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@ canvas {
     height: 600px;
 }
 
+h1 {
+    font-size: 80px;
+}
+
+h1 span {
+    font-size: small;
+    /*font-style: oblique; */
+}
+
 /*
 note! ehkä vielä game-conatiner class sinne main.js:ään??
 
