--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,15 @@ canvas {
 
 h1 {
     font-size: 80px;
+    text-align: center;
 }
 
-h1 span {
-    font-size: small;
-    /*font-style: oblique; */
+
+button {
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 5px;
+    margin: 15% 45%; /*this is bad :D*/
 }
 
 /*
