--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,12 @@
 
 body {
     overflow-y: hidden;
+    background-image: url(img/generic_retro.jpg);
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 canvas {
-    background-color: blueviolet;
+    /*background-color: blueviolet;*/
     height: 600px;
 }
 
